'add student' button functionality implemented

--- a/Markbook.vcxproj
+++ b/Markbook.vcxproj
@@ -135,12 +135,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\AddStudentDialog.h" />
     <ClInclude Include="src\App.h" />
     <ClInclude Include="src\Course.h" />
     <ClInclude Include="src\MainFrame.h" />
     <ClInclude Include="src\Student.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\AddStudentDialog.cpp" />
     <ClCompile Include="src\App.cpp" />
     <ClCompile Include="src\Course.cpp" />
     <ClCompile Include="src\MainFrame.cpp" />
