--- a/Markbook.vcxproj.filters
+++ b/Markbook.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="src\AddStudentDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\AddCourseDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MainFrame.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\AddStudentDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\AddCourseDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
