--- a/Markbook.vcxproj.filters
+++ b/Markbook.vcxproj.filters
@@ -15,42 +15,42 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\MainFrame.h">
+    <ClInclude Include="src\main\MainFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\App.h">
+    <ClInclude Include="src\main\App.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Student.h">
+    <ClInclude Include="src\info\Student.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Course.h">
+    <ClInclude Include="src\info\Course.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\AddStudentDialog.h">
+    <ClInclude Include="src\dialog\AddStudentDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\AddCourseDialog.h">
+    <ClInclude Include="src\dialog\AddCourseDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\MainFrame.cpp">
+    <ClCompile Include="src\main\MainFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\App.cpp">
+    <ClCompile Include="src\main\App.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Student.cpp">
+    <ClCompile Include="src\info\Student.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Course.cpp">
+    <ClCompile Include="src\info\Course.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\AddStudentDialog.cpp">
+    <ClCompile Include="src\dialog\AddStudentDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\AddCourseDialog.cpp">
+    <ClCompile Include="src\dialog\AddCourseDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
